# bucketbag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: bench.py  measure.py
src/bucketbag/: __init__.py
tests/: conftest.py  test_batched_files.py  test_glob.py  test_iter_keys.py  test_loaded_item.py  test_pack.py  test_parse_bucket.py
