[project]
name = "bucketbag"
version = "0.1.0"
description = "A minimal, toolz-style helper for batched, bounded-memory access to Hugging Face bucket files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Daniel van Strien" }]
keywords = ["huggingface", "buckets", "batch", "toolz", "dataset"]
dependencies = [
    "huggingface-hub>=1.12",
    "hf-xet",
    "toolz",
    "pyarrow>=15.0",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/davanstrien/bucketbag"
Repository = "https://github.com/davanstrien/bucketbag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bucketbag"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
