[project]
name = "bucketbag"
version = "0.1.0"
description = "A minimal, toolz-style helper for batched, bounded-memory access to Hugging Face bucket files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Daniel van Strien" }]
keywords = ["huggingface", "buckets", "batch", "toolz", "dataset"]
dependencies = [
    "huggingface-hub>=1.12",
    "hf-xet",
    "toolz",
    "pyarrow>=15.0",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/davanstrien/bucketbag"
Repository = "https://github.com/davanstrien/bucketbag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bucketbag"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pytest>=9.1.1",
    "ruff>=0.15",
]

# Pin the index to public PyPI so the lockfile resolves against the canonical registry,
# independent of any ambient uv config (e.g. a machine-local index-url). This keeps
# `uv sync` reproducible for CI and other contributors.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
